--- a/fonts/style.css
+++ b/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?5e9zwj');
-  src:  url('fonts/icomoon.eot?5e9zwj#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?5e9zwj') format('truetype'),
-    url('fonts/icomoon.woff?5e9zwj') format('woff'),
-    url('fonts/icomoon.svg?5e9zwj#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?s0alh8');
+  src:  url('fonts/icomoon.eot?s0alh8#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?s0alh8') format('truetype'),
+    url('fonts/icomoon.woff?s0alh8') format('woff'),
+    url('fonts/icomoon.svg?s0alh8#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,29 +24,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-facebook:before {
-  content: "\ea90";
-}
-.icon-twitter:before {
-  content: "\ea96";
-}
-.icon-linkedin2:before {
-  content: "\eaca";
-}
 .icon-music:before {
   content: "\e911";
 }
-.icon-book:before {
-  content: "\e91f";
-}
-.icon-file-text:before {
-  content: "\e922";
-}
 .icon-file-music:before {
   content: "\e928";
-}
-.icon-file-video:before {
-  content: "\e92a";
 }
 .icon-address-book:before {
   content: "\e944";
@@ -54,11 +36,20 @@
 .icon-calendar:before {
   content: "\e953";
 }
-.icon-bubbles4:before {
-  content: "\e970";
-}
 .icon-users:before {
   content: "\e972";
+}
+.icon-menu:before {
+  content: "\e9bd";
+}
+.icon-plus:before {
+  content: "\ea0a";
+}
+.icon-text-color:before {
+  content: "\ea6d";
+}
+.icon-facebook:before {
+  content: "\ea90";
 }
 .icon-youtube2:before {
   content: "\ea9e";
