--- a/less/fonts.less
+++ b/less/fonts.less
@@ -51,10 +51,10 @@
 
 @font-face {
 	font-family: 'Ubuntu';
-	src: url('Ubuntu-Medium.eot');
-	src: url('Ubuntu-Medium.eot?#iefix') format('embedded-opentype'),
-		url('Ubuntu-Medium.woff') format('woff'),
-		url('Ubuntu-Medium.ttf') format('truetype');
+	src: url('../fonts/Ubuntu-Medium.eot');
+	src: url('../fonts/Ubuntu-Medium.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Ubuntu-Medium.woff') format('woff'),
+		url('../fonts/Ubuntu-Medium.ttf') format('truetype');
 	font-weight: 500;
 	font-style: normal;
 }
@@ -102,25 +102,13 @@
 	font-style: normal;
 }
 
-
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/fonts/icomoon.eot?yv2lt6');
-  src:  url('../fonts/fonts/icomoon.eot?yv2lt6#iefix') format('embedded-opentype'),
-    url('../fonts/fonts/icomoon.ttf?yv2lt6') format('truetype'),
-    url('../fonts/fonts/icomoon.woff?yv2lt6') format('woff'),
-    url('../fonts/fonts/icomoon.svg?yv2lt6#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?2bwcxw');
-  src:  url('../fonts/icomoon.eot?2bwcxw#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?2bwcxw') format('truetype'),
-    url('../fonts/icomoon.woff?2bwcxw') format('woff'),
-    url('../fonts/icomoon.svg?2bwcxw#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?s0alh8');
+  src:  url('../fonts/icomoon.eot?s0alh8#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?s0alh8') format('truetype'),
+    url('../fonts/icomoon.woff?s0alh8') format('woff'),
+    url('../fonts/icomoon.svg?s0alh8#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -140,29 +128,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-facebook:before {
-  content: "\ea90";
-}
-.icon-twitter:before {
-  content: "\ea96";
-}
-.icon-linkedin2:before {
-  content: "\eaca";
-}
 .icon-music:before {
   content: "\e911";
 }
-.icon-book:before {
-  content: "\e91f";
-}
-.icon-file-text:before {
-  content: "\e922";
-}
 .icon-file-music:before {
   content: "\e928";
-}
-.icon-file-video:before {
-  content: "\e92a";
 }
 .icon-address-book:before {
   content: "\e944";
@@ -170,8 +140,20 @@
 .icon-calendar:before {
   content: "\e953";
 }
-.icon-bubbles4:before {
-  content: "\e970";
+.icon-users:before {
+  content: "\e972";
+}
+.icon-menu:before {
+  content: "\e9bd";
+}
+.icon-plus:before {
+  content: "\ea0a";
+}
+.icon-text-color:before {
+  content: "\ea6d";
+}
+.icon-facebook:before {
+  content: "\ea90";
 }
 .icon-youtube2:before {
   content: "\ea9e";
